--- a/templates/landing-page.html
+++ b/templates/landing-page.html
@@ -66,9 +66,11 @@ https://templatemo.com/tm-579-cyborg-gaming
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
                         <li><a href="index.html" class="active">Home</a></li>
-                        <li><a href="browse.html">Browse</a></li>
-                        <li><a href="details.html">Details</a></li>
-                        <li><a href="streams.html">Streams</a></li>
+                        <li><a href="proyectosavances.html">Avances de los Proyectos</a></li>
+                        <li><a href="proyectos.html">Proyectos</a></li>
+                        <li><a href="equipos.html">Equipos</a></li>
+                        <li><a href="equiposintegrantes.html">Integrantes de los Equipos</a></li>
+                        <li><a href="integrantes.html">Integrantes</a></li>
                         <li><a href="profile.html">Profile <img src="/static/landing-page/assets/images/profile-header.jpg" alt=""></a></li>
                     </ul>   
                     <a class='menu-trigger'>
@@ -92,10 +94,10 @@ https://templatemo.com/tm-579-cyborg-gaming
             <div class="row">
               <div class="col-lg-7">
                 <div class="header-text">
-                  <h6>Welcome To Cyborg</h6>
-                  <h4><em>Browse</em> Our Popular Games Here</h4>
+                  <h6>App 11 Proyectos</h6>
+                  <h4><em>Proyectos</em> todos los proyectos</h4>
                   <div class="main-button">
-                    <a href="./dashboard">Acceder al sitio</a>
+                    <a href="./dashboard">Iniciar Sesión</a>
                   </div>
                 </div>
               </div>
@@ -108,7 +110,7 @@ https://templatemo.com/tm-579-cyborg-gaming
             <div class="row">
               <div class="col-lg-12">
                 <div class="heading-section">
-                  <h4><em>Most Popular</em> Right Now</h4>
+                  <h4><em>Proyectos</em> Mas recientes</h4>
                 </div>
                 <div class="row">
                   <div class="col-lg-3 col-sm-6">
@@ -199,7 +201,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="col-lg-12">
                     <div class="main-button">
-                      <a href="browse.html">Discover Popular</a>
+                      <a href="browse.html">Ver Más</a>
                     </div>
                   </div>
                 </div>
@@ -212,7 +214,7 @@ https://templatemo.com/tm-579-cyborg-gaming
           <div class="gaming-library">
             <div class="col-lg-12">
               <div class="heading-section">
-                <h4><em>Your Gaming</em> Library</h4>
+                <h4><em>Your Proyect</em> Library</h4>
               </div>
               <div class="item">
                 <ul>
@@ -285,6 +287,7 @@ https://templatemo.com/tm-579-cyborg-gaming
   </body>
 
 </html>
+
 
 
 
