--- a/templates/index.html
+++ b/templates/index.html
@@ -99,10 +99,10 @@
             <a class="nav-link" href="#/equipos">Equipos</a>
         </li>
         
-        <li class="nav-item">
+        <li class="nav-item ng-hide" ng-show="login">
             <a class="nav-link" href="#/equiposintegrantes">equipos integrantes</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item ng-hide" ng-show="login">
             <a class="nav-link" href="#/proyectosavances">proyectos avances</a>
         </li>
         <!--
@@ -135,6 +135,7 @@
     </div>
 </body>
 </html>
+
 
 
 
