--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flatpickr/4.6.13/flatpickr.min.js" integrity="sha512-K/oyQtMXpxI4+K0W7H25UopjM8pzq0yrVdFdG21Fh5dBe91I40pDd9A4lzNlHPHBIP2cwZuoxaUSX0GJSObvGA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flatpickr/4.6.13/l10n/es.min.js" integrity="sha512-qNFoLkoKxYYiUEW14iAJbDcNsfoLTNznoq7UTa5xUp23NmGnlgC/pPWzN5kMcQC4bm+eFx2ibqelc3ARWf+SJw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-    <title>APP / AngularJS</title>
+    <title>Proyectos</title>
     <script src="https://js.pusher.com/8.4.0/pusher.min.js"></script>
     <!-- CSS: JQuery Validate -->
     <style>.form-control:focus {box-shadow: none !important;}; label.is-invalid {background: red; padding: 3px; margin: 3px; border-radius: 3px; font-weight: bold; width: 100%;};</style>
@@ -135,6 +135,7 @@
     </div>
 </body>
 </html>
+
 
 
 
