--- a/templates/landing-page.html
+++ b/templates/landing-page.html
@@ -8,7 +8,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <title>Cyborg - Awesome HTML5 Template</title>
+    <title>Proyectos</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/static/landing-page/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -287,6 +287,7 @@ https://templatemo.com/tm-579-cyborg-gaming
   </body>
 
 </html>
+
 
 
 
