--- a/templates/index.html
+++ b/templates/index.html
@@ -78,10 +78,13 @@
 
 </head>
 <body>
+
+<div class="ng-hide" ng-show="!spinnerGrow">
     <div class="float-end mt-1 me-3" style="font-size: 1.25rem;">
         <i class="bi bi-clock"></i>
          {{ '{{ angularjsHora }}' }}
     </div>
+
 
     <ul class="app-menu nav nav-underline justify-content-center">
         <li class="nav-item ng-hide" ng-show="!login">
@@ -117,7 +120,7 @@
         </li>
         -->
     </ul>
-
+<div>
     <div id="appContent" class="app-content container p-3 {{ '{{ slide }}' }}" ng-view></div>
 
     <div class="app-float-button bg-body" style="z-index: 2; position: fixed; bottom: 5px; left: 5px; cursor: pointer;">
@@ -135,6 +138,7 @@
     </div>
 </body>
 </html>
+
 
 
 
