--- a/templates/index.html
+++ b/templates/index.html
@@ -87,25 +87,25 @@
 
 
     <ul class="app-menu nav nav-underline justify-content-center">
-        <li class="nav-item ng-hide" ng-show="!login">
+        <li class="nav-item" ng-show="!login">
             <a class="nav-link" href="#/">Inicio</a>
         </li>
-        <li class="nav-item ng-hide" ng-show="login">
+        <li class="nav-item" ng-show="login">
             <a class="nav-link" href="#/integrantes">Integrantes</a>
         </li>
 
-        <li class="nav-item ng-hide" ng-show="login">
+        <li class="nav-item" ng-show="login">
             <a class="nav-link" href="#/proyectos">Proyectos</a>
         </li>
 
-        <li class="nav-item ng-hide" ng-show="login">
+        <li class="nav-item" ng-show="login">
             <a class="nav-link" href="#/equipos">Equipos</a>
         </li>
         
-        <li class="nav-item ng-hide" ng-show="login">
+        <li class="nav-item" ng-show="login">
             <a class="nav-link" href="#/equiposintegrantes">equipos integrantes</a>
         </li>
-        <li class="nav-item ng-hide" ng-show="login">
+        <li class="nav-item" ng-show="login">
             <a class="nav-link" href="#/proyectosavances">proyectos avances</a>
         </li>
         <!--
@@ -138,6 +138,7 @@
     </div>
 </body>
 </html>
+
 
 
 
