--- a/templates/proyectos.html
+++ b/templates/proyectos.html
@@ -3,6 +3,8 @@
     <div class="parent">
         <div class="div1">
             <div class="mb-1">
+                <input type="hidden" class="form-control" id="idProyecto" name="idProyecto">
+            </div>
                 <label>Nombre del Proyecto</label>
                 <input type="text" class="form-control" id="txtNombreProyecto" name="txtNombreProyecto">
             </div>
@@ -44,4 +46,5 @@
     </div>
 </div>
 </div>
+
 
