--- a/templates/tbodyProyectos.html
+++ b/templates/tbodyProyectos.html
@@ -12,7 +12,7 @@
       </button>
       </td>
       <td>
-        <button type="button" class="btn btn-danger btn-end btnModificarProyecto" data-id="{{ proyecto.idProyecto }}">
+        <button type="button" class="btn btn-danger btn-end btnEditarProyecto" data-id="{{ proyecto.idProyecto }}">
           Modificar
         </button>
       </td>
@@ -23,6 +23,7 @@
     <td colspan="7">No hay registros</td>
   </tr>
 {% endif %}
+
 
 
 
