--- a/templates/equipos.html
+++ b/templates/equipos.html
@@ -5,7 +5,7 @@
         <input type="text" class="form-control" id="txtEquipoNombre" name="txtEquipoNombre">
     </div>
     <div class="mb-1 text-end">
-        <button class="btn btn-primary">Guardar</button>
+        <button class="btn btn-primary" id="btnGuardar">Guardar</button>
     </div>
 </form>
 <div class="table-responsive">
