--- a/templates/integrantes.html
+++ b/templates/integrantes.html
@@ -1,4 +1,5 @@
 <form id="frmIntegrante" method="post">
+    <input type="hidden" id="idIntegrante" name="idIntegrante">
     <div class="mb-1">
         <label>Nombre del Integrante</label>
         <input type="text" class="form-control" id="txtNombreIntegrante" name="txtNombreIntegrante">
@@ -13,6 +14,7 @@
             <tr>
                 <th>Id</th>
                 <th>Nombre</th>
+                <th>Accion</th>
                 <th></th>
             </tr>
         </thead>
