--- a/templates/tbodyEquiposIntegrantes.html
+++ b/templates/tbodyEquiposIntegrantes.html
@@ -9,6 +9,10 @@
         <button class="btn btn-danger btn-end btnEliminarEquipoIntegrante" data-id="{{ equipointegrante.idEquipoIntegrante }}">
           Eliminar
         </button>
+        <button class="btn btn-primary btn-end btnModificarEquipoIntegrante" data-id="{{ equipointegrante.idEquipoIntegrante }}">
+  Modificar
+        </button>
+
       </td>
     </tr>
   {% endfor %}
