--- a/templates/equiposintegrantes.html
+++ b/templates/equiposintegrantes.html
@@ -1,4 +1,6 @@
 <form id="frmEquipoIntegrante" method="post">
+<input type="hidden" id="idEquipoIntegrante" name="idEquipoIntegrante">
+
     <div class="parent">
         <div class="div1">
             <div class="mb-1">
