--- a/templates/tbodyEquiposIntegrantes.html
+++ b/templates/tbodyEquiposIntegrantes.html
@@ -9,10 +9,11 @@
         <button class="btn btn-danger btn-end btnEliminarEquipoIntegrante" data-id="{{ equipointegrante.idEquipoIntegrante }}">
           Eliminar
         </button>
-        <button class="btn btn-primary btn-end btnModificarEquipoIntegrante" data-id="{{ equipointegrante.idEquipoIntegrante }}">
-  Modificar
-        </button>
-
+      
+         <button class="btn btn-primary btn-end btnModificarEquipoIntegrante"
+                data-id="{{ equipointegrante.idEquipoIntegrante }}"
+                data-idequipo="{{ equipointegrante.idEquipo }}"
+                data-idintegrante="{{ equipointegrante.idIntegrante }}">
       </td>
     </tr>
   {% endfor %}
