--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -121,7 +121,7 @@
         -->
     </ul>
 <div>
-    <div id="appContent" class="app-content container p-3 {{ '{{ slide }}' }}" ng-view></div>
+    <div id="appContent" class="app-content container p-3 {{ slide }}" ng-view></div>
 
     <div class="app-float-button bg-body" style="z-index: 2; position: fixed; bottom: 5px; left: 5px; cursor: pointer;">
         <ul class="list-group list-group-horizontal">
