--- a/templates/tbodyProyectos.html
+++ b/templates/tbodyProyectos.html
@@ -7,7 +7,7 @@
       <td>{{ proyecto.objetivo }}</td>
       <td>{{ proyecto.estado }}</td>
       <td>
-        <button type="button" class="btn btn-danger btn-end btnEliminarProyecto" data-id="{{ proyecto.idProyecto }}">
+        <button type="button" class="btn btn-danger btn-end btnModificarProyecto" data-id="{{ proyecto.idProyecto }}">
         Eliminar
       </button>
       </td>
@@ -23,6 +23,7 @@
     <td colspan="7">No hay registros</td>
   </tr>
 {% endif %}
+
 
 
 
