--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -93,11 +93,11 @@
             <a class="nav-link" href="#/integrantes">Integrantes</a>
         </li>
 
-        <li class="nav-item" ng-show="login">
+        <li class="nav-item" ng-if="login">
             <a class="nav-link" href="#/proyectos">Proyectos</a>
         </li>
 
-        <li class="nav-item" ng-show="login">
+        <li class="nav-item" ng-if="login">
             <a class="nav-link" href="#/equipos">Equipos</a>
         </li>
         
