--- a/templates/proyectos.html
+++ b/templates/proyectos.html
@@ -6,7 +6,7 @@
                 <input type="hidden" class="form-control" id="idProyecto" name="idProyecto">
             </div>
                 <label>Nombre del Proyecto</label>
-                <input type="text" class="form-control" id="txtNombreProyecto" name="txtNombreProyecto">
+                <input type="text" class="form-control" id="txtNombreProyecto" name="tituloProyecto">
             </div>
             <div class="mb-1">
                 <label>Equipo</label>
@@ -46,5 +46,6 @@
     </div>
 </div>
 </div>
+
 
 
