--- a/templates/tbodyProyectos.html
+++ b/templates/tbodyProyectos.html
@@ -7,9 +7,9 @@
       <td>{{ proyecto.objetivo }}</td>
       <td>{{ proyecto.estado }}</td>
       <td>
-        <button type="button" class="btn btn-danger btn-end btnEliminarProyecto" data-id="{{ proyecto.idProyecto }}">
-        Eliminar
-      </button>
+        <button type="button" class="btn btn-danger btnEliminarProyecto" data-id="{{ proyecto.idProyecto }}">
+          Eliminar
+        </button>
       </td>
       <td>
         <button type="button" class="btn btn-danger btn-end btnEditarProyecto" data-id="{{ proyecto.idProyecto }}">
@@ -23,6 +23,7 @@
     <td colspan="7">No hay registros</td>
   </tr>
 {% endif %}
+
 
 
 
