--- a/templates/tbodyEquiposIntegrantes.html
+++ b/templates/tbodyEquiposIntegrantes.html
@@ -11,8 +11,8 @@
         </button>
          <button class="btn btn-primary btn-end btnModificarEquipoIntegrante"
                 data-id="{{ equipointegrante.idEquipoIntegrante }}"
-                data-idequipo="{{ equipointegrante.idEquipo }}"
-                data-idintegrante="{{ equipointegrante.idIntegrante }}">
+                data-idequipo="{{ equipointegrante.nombreEquipo }}"
+                data-idintegrante="{{ equipointegrante.nombreIntegrante }}">
             Modificar
          </button>
       </td>
